# lucent-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lucent-engine.sln  premake5.lua  vcpkg.json
Lucent/: CMakeLists.txt  keys.h  premake5.lua
Lucent/libs/Glad/: premake5.lua
Lucent/libs/Glad/include/glad/: glad.h
Lucent/libs/Glad/src/: glad.c
Lucent/res/Shaders/: FragmentShader.frag  VertexShader.vert
Lucent/src/: Lucent.h  input.cpp  input.h  main.cpp  window.cpp  window.h
Lucent/src/application/: game.cpp  game.h  input.cpp  input.h  keys.h  window.cpp  window.h
Lucent/src/core/: camera.cpp  camera.h  class_info.h  component.cpp  component.h  entity.cpp  entity.h  scene.cpp  scene.h  script.cpp  script.h  sprite_renderer.cpp  sprite_renderer.h  transform.cpp  transform.h
Lucent/src/graphics/: camera.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
Lucent/src/physics/: contact_listener.cpp  contact_listener.h  physics2D.h  physics_components.cpp  physics_components.h
Lucent/src/utils/: resources.cpp  resources.h  stb_image.cpp
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/res/shaders/: sprite.vert
Sandbox/src/: main.cpp
lucent-engine/: lucent-engine.vcxproj  lucent-engine.vcxproj.filters  main.cpp  window.cpp  window.h
lucent-engine/src/: main.cpp
win-gen/: win-premake-run.bat
